--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,67 @@
+adafruit-ampy==1.0.7
+astor==0.8.1
+attrs==22.1.0
+autograd==1.4
+autograd-gamma==0.5.0
+Brotli==1.0.9
+cbor==1.0.0
+cbor2==5.4.3
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+cycler==0.11.0
+docopt==0.6.2
+feather-format==0.4.1
+fonttools==4.34.4
+formulaic==0.4.0
+future==0.18.2
+h5py==3.7.0
+idna==3.3
+inflate64==0.3.0
+iniconfig==1.1.1
+interface-meta==1.3.0
+joblib==1.1.0
+kiwisolver==1.4.4
+lifelines==0.27.1
+llvmlite==0.39.0
+matplotlib==3.5.3
+multivolumefile==0.2.3
+numba==0.56.0
 numpy==1.22.4
+packaging==21.3
 pandas==1.4.2
+Pillow==9.2.0
+pluggy==1.0.0
+psutil==5.9.1
+py==1.11.0
+py7zr==0.20.0
+pyarrow==9.0.0
+pybcj==1.0.1
 pybind11==2.9.2
+pycox==0.2.3
+pycryptodomex==3.15.0
+pyparsing==3.0.9
+pyppmd==0.18.3
+pyserial==3.5
+pytest==7.1.2
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 pytz==2022.1
+pyzstd==0.15.3
+requests==2.28.1
+scikit-learn==1.1.2
+scipy==1.9.0
 signatory==1.2.6.1.9.0
 six==1.16.0
+sklearn==0.0
+sklearn-pandas==2.2.0
 spdlog==2.0.4
+texttable==1.6.4
+threadpoolctl==3.1.0
+tomli==2.0.1
 torch==1.9.0
+torchtuples==0.2.2
+tqdm==4.64.0
 typing_extensions==4.2.0
+urllib3==1.26.11
+wrapt==1.14.1
